<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll_View_add_receita"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="top"
        android:background="@drawable/bg_cadastro_receita_layout"
        android:gravity="top"
        android:orientation="vertical"
        android:padding="8dp">

        <TextView
            android:id="@+id/txv_titulo_ui_receita"
            android:layout_width="370dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="16dp"
            android:gravity="center"
            android:text="Cadastrar Receita"
            android:textSize="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/img_receita_cadastro"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:layout_weight="0"
            android:background="?attr/selectableItemBackground"
            android:scaleType="fitXY"
            app:shapeAppearanceOverlay="@style/ImagemRounded"
            app:srcCompat="@drawable/red_image_search_24" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txinp_nome_receita"
            style="@style/TextInputStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txv_titulo_ui_receita">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_nome_receita"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Nome da Receita" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txinp_tempo_preparo"
            style="@style/TextInputStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp">

            <com.vicmikhailau.maskededittext.MaskedEditText
                android:id="@+id/edt_tempo_preparo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Tempo de preparo"
                android:inputType="time"
                app:mask="##:##" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txinp_ingrediente_receita"
            style="@style/TextInputStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="top|left"
            android:layout_margin="0dp"
            android:layout_marginTop="0dp"
            android:gravity="top|left"
            android:padding="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_ingredientes_receita"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:foregroundGravity="center"
                android:hint="Ingredientes"
                android:isScrollContainer="true"
                android:overScrollMode="always"
                android:scrollbarStyle="insideInset"
                android:scrollbars="vertical"
                android:singleLine="false" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txinp_intreucoes_receita"
            style="@style/TextInputStyle"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_margin="16dp"
            android:layout_marginTop="0dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_intreucoes_receita"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="top"
                android:foregroundGravity="center"
                android:gravity="top|left"
                android:hint="Instruções"
                android:isScrollContainer="true"
                android:overScrollMode="always"
                android:scrollbarStyle="insideInset"
                android:scrollbars="vertical"
                android:singleLine="false" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_salvar"

            style="@style/buttonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="32dp"
            android:layout_weight="1"
            android:backgroundTint="@color/vermelho_forte"
            android:text="Criar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txinp_descricao_receita" />

    </LinearLayout>

</ScrollView>